Shelter
=======

version 0.1:
  New Feature:
  * Check links of the domain in parallel