@@ -8,7 +8,6 @@ package crawler
 import (
 	"io"
 	"net/http"
-	"reflect"
 	"strings"
 	"testing"
 )
@@ -21,7 +20,7 @@ func (f FakeFetcher) Fetch(url string) (io.Reader, error) {
 	return f(url)
 }
 
-func TestCrawlPageMustReturnPageWithInformation(t *testing.T) {
+func TestCrawlMustReturnPageWithInformation(t *testing.T) {
 	testData := []struct {
 		url      string
 		data     string
@@ -45,7 +44,7 @@ func TestCrawlPageMustReturnPageWithInformation(t *testing.T) {
 				Links: []Link{
 					{
 						Label: "Example",
-						Page:  Page{URL: "example.net"},
+						Page:  &Page{URL: "example.net"},
 					},
 				},
 				StaticAssets: []string{
@@ -74,7 +73,7 @@ func TestCrawlPageMustReturnPageWithInformation(t *testing.T) {
 				Links: []Link{
 					{
 						Label: "Example",
-						Page:  Page{URL: "example.net"},
+						Page:  &Page{URL: "example.net"},
 					},
 				},
 				StaticAssets: []string{
@@ -103,7 +102,7 @@ func TestCrawlPageMustReturnPageWithInformation(t *testing.T) {
 				Links: []Link{
 					{
 						Label: "Example",
-						Page:  Page{URL: "example.net"},
+						Page:  &Page{URL: "example.net"},
 					},
 				},
 				StaticAssets: []string{
@@ -124,14 +123,14 @@ func TestCrawlPageMustReturnPageWithInformation(t *testing.T) {
 			t.Fatalf("Unexpected error returned. Expected '%v' and got '%v'", nil, err)
 		}
 
-		if !reflect.DeepEqual(testItem.expected, *page) {
+		if !page.Equal(testItem.expected) {
 			t.Errorf("Unexpected page returned. Expected '%#v' and got '%#v'",
 				testItem.expected, page)
 		}
 	}
 }
 
-func TestCrawlPageMustReturnErrorOnFetchProblems(t *testing.T) {
+func TestCrawlMustReturnErrorOnFetchProblems(t *testing.T) {
 	testData := []struct {
 		url      string
 		data     string
@@ -152,6 +151,223 @@ func TestCrawlPageMustReturnErrorOnFetchProblems(t *testing.T) {
 		if testItem.expected != err {
 			t.Fatalf("Unexpected error returned. Expected '%v' and got '%v'",
 				testItem.expected, err)
+		}
+	}
+}
+
+func TestCrawlMustFollowLinks(t *testing.T) {
+	testData := []struct {
+		url      string
+		data     map[string]string
+		expected Page
+	}{
+		// One level link
+		{
+			url: "example.com",
+			data: map[string]string{
+				"example.com": `<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="example.css">
+  </head>
+  <body>
+    <a href="example.com/link1.html">Link 1</a>
+    <img src="example.png" alt="example"/>
+    <script type="text/javascript" src="example.js"/>
+  </body>
+</html>`,
+				"example.com/link1.html": `<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="link1.css">
+  </head>
+  <body>
+    <img src="link1.png" alt="link1"/>
+    <script type="text/javascript" src="link1.js"/>
+  </body>
+</html>`,
+			},
+			expected: Page{
+				URL: "example.com",
+				Links: []Link{
+					{
+						Label: "Link 1",
+						Page: &Page{
+							URL: "example.com/link1.html",
+							StaticAssets: []string{
+								"link1.css",
+								"link1.png",
+								"link1.js",
+							},
+						},
+					},
+				},
+				StaticAssets: []string{
+					"example.css",
+					"example.png",
+					"example.js",
+				},
+			},
+		},
+
+		// Two levels link
+		{
+			url: "example.com",
+			data: map[string]string{
+				"example.com": `<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="example.css">
+  </head>
+  <body>
+    <a href="example.com/link1.html">Link 1</a>
+    <img src="example.png" alt="example"/>
+    <script type="text/javascript" src="example.js"/>
+  </body>
+</html>`,
+				"example.com/link1.html": `<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="link1.css">
+  </head>
+  <body>
+    <a href="example.com/link2.html">Link 2</a>
+    <img src="link1.png" alt="link1"/>
+    <script type="text/javascript" src="link1.js"/>
+  </body>
+</html>`,
+				"example.com/link2.html": `<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="link2.css">
+  </head>
+  <body>
+    <img src="link2.png" alt="link2"/>
+    <script type="text/javascript" src="link2.js"/>
+  </body>
+</html>`,
+			},
+			expected: Page{
+				URL: "example.com",
+				Links: []Link{
+					{
+						Label: "Link 1",
+						Page: &Page{
+							URL: "example.com/link1.html",
+							Links: []Link{
+								{
+									Label: "Link 2",
+									Page: &Page{
+										URL: "example.com/link2.html",
+										StaticAssets: []string{
+											"link2.css",
+											"link2.png",
+											"link2.js",
+										},
+									},
+								},
+							},
+							StaticAssets: []string{
+								"link1.css",
+								"link1.png",
+								"link1.js",
+							},
+						},
+					},
+				},
+				StaticAssets: []string{
+					"example.css",
+					"example.png",
+					"example.js",
+				},
+			},
+		},
+
+		// Cyclic link
+		{
+			url: "example.com",
+			data: map[string]string{
+				"example.com": `<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="example.css">
+  </head>
+  <body>
+    <a href="example.com/link1.html">Link 1</a>
+    <img src="example.png" alt="example"/>
+    <script type="text/javascript" src="example.js"/>
+  </body>
+</html>`,
+				"example.com/link1.html": `<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="link1.css">
+  </head>
+  <body>
+    <a href="example.com/link2.html">Link 2</a>
+    <img src="link1.png" alt="link1"/>
+    <script type="text/javascript" src="link1.js"/>
+  </body>
+</html>`,
+				"example.com/link2.html": `<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="link2.css">
+  </head>
+  <body>
+    <a href="example.com">Example</a>
+    <img src="link2.png" alt="link2"/>
+    <script type="text/javascript" src="link2.js"/>
+  </body>
+</html>`,
+			},
+			expected: Page{
+				URL: "example.com",
+				Links: []Link{
+					{
+						Label: "Link 1",
+						Page: &Page{
+							URL: "example.com/link1.html",
+							Links: []Link{
+								{
+									Label: "Link 2",
+									Page: &Page{
+										URL: "example.com/link2.html",
+										Links: []Link{
+											{
+												Label:      "Example",
+												CyclicPage: true,
+											},
+										},
+										StaticAssets: []string{
+											"link2.css",
+											"link2.png",
+											"link2.js",
+										},
+									},
+								},
+							},
+							StaticAssets: []string{
+								"link1.css",
+								"link1.png",
+								"link1.js",
+							},
+						},
+					},
+				},
+				StaticAssets: []string{
+					"example.css",
+					"example.png",
+					"example.js",
+				},
+			},
+		},
+	}
+
+	for _, testItem := range testData {
+		page, err := Crawl(testItem.url, FakeFetcher(func(url string) (io.Reader, error) {
+			return strings.NewReader(testItem.data[url]), nil
+		}))
+
+		if err != nil {
+			t.Fatalf("Unexpected error returned. Expected '%v' and got '%v'", nil, err)
+		}
+
+		if !page.Equal(testItem.expected) {
+			t.Errorf("Unexpected page returned. Expected '%#v' and got '%#v'",
+				testItem.expected, page)
 		}
 	}
 }
