@@ -4,3 +4,4 @@ Shelter
 version 0.1:
   New Feature:
   * Check links of the domain in parallel
+  * List page static assets and links
